# ReignofGunters

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/adventure_recognition/: simple_navigation_goals
devel/lib/pkgconfig/: adventure_arm_bringup.pc  adventure_arm_description.pc  adventure_arm_moveit_config.pc  adventure_bringup.pc  adventure_description.pc  adventure_gazebo.pc  adventure_recognition.pc  adventure_teleop.pc
devel/share/adventure_arm_bringup/cmake/: adventure_arm_bringupConfig.cmake
devel/share/adventure_arm_description/cmake/: adventure_arm_descriptionConfig.cmake
devel/share/adventure_arm_moveit_config/cmake/: adventure_arm_moveit_configConfig.cmake
devel/share/adventure_bringup/cmake/: adventure_bringupConfig.cmake
devel/share/adventure_description/cmake/: adventure_descriptionConfig.cmake
devel/share/adventure_gazebo/cmake/: adventure_gazeboConfig.cmake
devel/share/adventure_recognition/cmake/: adventure_recognitionConfig.cmake
devel/share/adventure_teleop/cmake/: adventure_teleopConfig.cmake
src/project_6/adventure_gripper/arm_manipulation/: CMakeLists.txt  package.xml  pick_and_place.py
src/project_6/adventure_gripper/arm_manipulation/src/: arm_manipulation_node.cpp
src/project_6/adventure_recognition/: CMakeLists.txt  object_search.py  object_search.py~
src/project_6/adventure_recognition/include/: ObjectRecognition.h
src/project_6/adventure_recognition/include/object_recognition/: AdventureRecognition.h  ObjectRecognition.h
src/project_6/adventure_recognition/launch/: adventurerecognition.launch  candy_kingdom_map.yaml  navigation.launch
src/project_6/adventure_recognition/src/: AdventureRecognition.cpp  ObjectRecognition.cpp  obj_recog.cpp  object_recognition.cpp  simple_navigation_goals.cpp
src/project_6/adventure_simulator/adventure_gazebo/launch/: adventure_world.launch
src/pvivek_project_6/adventure_recognition/launch/: candy_kingdom_map.pgm
src/pvivek_project_6/adventure_simulator/adventure_description/finn/: finn.urdf.xacro
src/pvivek_project_6/adventure_simulator/adventure_gazebo/launch/: adventure.rviz  spawn_finn.launch
src/pvivek_project_6/adventure_simulator/adventure_gazebo/worlds/: candy_kingdom.world
